--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -27,7 +27,6 @@ header {
     color: white;
     padding-right: 2vw;
     height: 4vw;
-
 }
 
 nav {
@@ -42,7 +41,7 @@ nav {
     list-style: none;
     padding: 0;
     margin-top: 2vw;
-    font-size: 30px;
+    font-size: 26px;
 }
 .navUl a {
     text-decoration: none;
@@ -64,4 +63,49 @@ nav {
 section {
     padding-top: 4vw;
     padding-left: 10vw;
+}
+.main-page-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+}
+.main-page-content img {
+    width: 10%;
+}
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80%;
+    font-size: 20px;
+}
+.login-form label {
+    font-size: 30px;
+}
+.login-form a, p {
+    font-size: 15px;
+    text-decoration: none;
+    color: #000;
+}
+.login-form input[type="submit"] {
+    width: 10%;
+    height: 2vw;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #0d1b26;
+    color: #fff;
+    border: none;
+    transition: 0.3s;
+}
+.login-form input[type="submit"]:hover {
+    background-color: #46535e;;
+}
+.login-form input[type="text"], input[type="password"] {
+    font-size: 20px;
+    width: 100%;
+    height: 3vw;
+    margin: 20px 0 20px 0;
 }
