--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -73,6 +73,10 @@ section {
 .main-page-content img {
     width: 10%;
 }
+.main-page-content a {
+    color: #000;
+    text-decoration: none;
+}
 .login-form {
     display: flex;
     flex-direction: column;
@@ -106,5 +110,11 @@ section {
     font-size: 20px;
     width: 100%;
     height: 3vw;
-    margin: 20px 0 20px 0;
+    margin: 1vw 0 1vw 0;
+}
+
+.login-error {
+    color: red;
+    font-size: 20px;
+    margin-bottom: 2vw;
 }
