--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -2,9 +2,7 @@
 {% block title %}Zaloguj się{% endblock %}
 {% block content %}
 
-{% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
+
 
 <form method="post" action="{% url 'login' %}" class = 'login-form'>
     {% csrf_token %}
@@ -17,6 +15,14 @@
             <td>{{ form.password }}</td>
         </tr>
     </table>
+    {% if form.errors %}
+        <style>
+            .login-form input[type="text"], input[type="password"]:last-child {
+                margin-bottom: 0;
+            }
+        </style>
+        <p class = 'login-error'>Your username and password didn't match. Please try again.</p>
+    {% endif %}
     <input type="submit" value="Zaloguj" />
     <input type="hidden" name="next" value="{{ next }}" />
     <p><a href="{% url 'password_reset' %}">Zapomniałeś hasła?</a></p>
