--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -9,7 +9,7 @@ header {
     width: 100%;
     position: fixed;
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 1fr 3fr;
 }
 .logoBox {
     display: flex;
@@ -77,7 +77,7 @@ section {
     color: #000;
     text-decoration: none;
 }
-.login-form {
+.login-form, .report-malfunction-form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,12 +88,12 @@ section {
 .login-form label {
     font-size: 30px;
 }
-.login-form a, p {
+.login-form a, p, .report-malfunction-form a, p {
     font-size: 15px;
     text-decoration: none;
     color: #000;
 }
-.login-form input[type="submit"] {
+.login-form input[type="submit"], .report-malfunction-form input[type="submit"] {
     width: 10%;
     height: 2vw;
     font-size: 20px;
@@ -103,10 +103,10 @@ section {
     border: none;
     transition: 0.3s;
 }
-.login-form input[type="submit"]:hover {
+.login-form input[type="submit"]:hover, .report-malfunction-form input[type="submit"]:hover {
     background-color: #46535e;;
 }
-.login-form input[type="text"], input[type="password"] {
+.login-form input[type="text"], input[type="password"], .report-malfunction-form input[type="text"], input[type="password"] {
     font-size: 20px;
     width: 100%;
     height: 3vw;
@@ -116,4 +116,10 @@ section {
     color: red;
     font-size: 20px;
     margin-bottom: 2vw;
+}
+.username-box {
+    text-align: center;
+}
+.username-box h1 {
+    color: #fff;
 }
