--- a/app/templates/app/report-malfunction.html
+++ b/app/templates/app/report-malfunction.html
@@ -1,31 +1,34 @@
 {% extends 'app/index.html' %}
 
 {% block title %}Zgłoś awarię{% endblock %}
+{% load static %}
 {% block content %}
-
-
-
-<form method="post" action="" class = 'report-malfunction-form'>
-    {% csrf_token %}
-    <table>
-        <label>Zaloguj się:</label>
-        <tr>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-        </tr>
-    </table>
-    {% if form.errors %}
-        <style>
-            .login-form input[type="text"], input[type="password"]:last-child {
-                margin-bottom: 0;
-            }
-        </style>
+    {% if request.user_agent.is_mobile %}
+            <form method="post" action="" class = 'report-malfunction-form'>
+                {% csrf_token %}
+                <img src = {% static 'app/img/qr-code.png' %} class = 'qr-code-icon'/>
+            </form>
+    {% else %}
+            <form method="post" action="" class = 'report-malfunction-form'>
+                {% csrf_token %}
+                <table>
+                    <label>Zaloguj się:</label>
+                    <tr>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
+                </table>
+                {% if form.errors %}
+                    <style>
+                        .login-form input[type="text"], input[type="password"]:last-child {
+                            margin-bottom: 0;
+                        }
+                    </style>
+                {% endif %}
+                <input type="submit" value="Prześlij" />
+                <input type="hidden" name="next" value="{{ next }}" />
+            </form>
     {% endif %}
-    <input type="submit" value="Prześlij" />
-    <input type="hidden" name="next" value="{{ next }}" />
-</form>
-
-
 {% endblock %}
