--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -123,3 +123,53 @@ section {
 .username-box h1 {
     color: #fff;
 }
+@media only screen and (max-width: 500px) {
+    header {
+        background-color: #0d1b26;
+        height: 10vw;
+        width: 100%;
+        position: fixed;
+        display: grid;
+        grid-template-columns: 1fr 2fr 2fr;
+        align-items: center;
+    }
+    header h1 {
+        font-size: 3vw;
+    }
+    .logoBox {
+        display: flex;
+        align-items: center;
+        margin-left: 1vw;
+        height: 6vw;
+        width: auto;
+    }
+    .logo {
+        height: 100%;
+        width: auto;
+    }
+    .headerContent {
+        text-align: right;
+        color: white;
+        padding-right: 2vw;
+        height: 6vw;
+    }
+    section {
+        padding-top: 6vw;
+        padding-left: 0;
+    }
+    nav {
+        display: none;
+    }
+    .qr-code-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 80%;
+    }
+    .qr-code-icon {
+        height: 20vw;
+        width: auto;
+    }
+
+}
