--- a/app/templates/app/report-malfunction.html
+++ b/app/templates/app/report-malfunction.html
@@ -4,10 +4,11 @@
 {% load static %}
 {% block content %}
     {% if request.user_agent.is_mobile %}
-            <form method="post" action="" class = 'report-malfunction-form'>
-                {% csrf_token %}
-                <img src = {% static 'app/img/qr-code.png' %} class = 'qr-code-icon'/>
-            </form>
+        <div class="qr-code-container">
+            <img src = {% static 'app/img/qr-code.png' %} class = 'qr-code-icon'/>
+            <div class="qr-code-text">
+                <p>Kliknij, aby zeskanować kod QR maszyny.</p>
+        </div>
     {% else %}
             <form method="post" action="" class = 'report-malfunction-form'>
                 {% csrf_token %}
