--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -2,6 +2,8 @@ body {
     background-color: #F0F0F0;
     margin: 0;
     padding: 0;
+    -webkit-appearance: none;
+    border-radius: 0;
 }
 header {
     background-color: #0d1b26;
@@ -170,6 +172,25 @@ section {
     .qr-code-icon {
         height: 20vw;
         width: auto;
+    }
+    .login-form input[type="submit"] {
+        width: 30%;
+        height: 10vw;
+        font-size: 15px;
+        cursor: pointer;
+        background-color: #0d1b26;
+        color: #fff;
+        border: none;
+        transition: 0.3s;
+    }
+    .login-form input[type="submit"]:hover {
+        background-color: #46535e;;
+    }
+    .login-form input[type="text"], input[type="password"] {
+        font-size: 15px;
+        width: 100%;
+        height: 10vw;
+        margin: 4vw 0 2vw 0;
     }
 
 }
