qr code scanner on mobile device

--- a/app/templates/app/test_qr.html
+++ b/app/templates/app/test_qr.html
@@ -2,24 +2,46 @@
 <html>
   <head>
     <title>Instascan</title>
-    </script><script type="text/javascript" src="C:\Users\jj00sp\Documents\GitHub\praca-inz\app\static\app\js\instascan.min.js"></script>
+    {% comment %} </script><script type="text/javascript" src="C:\Users\jj00sp\Documents\GitHub\praca-inz\app\static\app\js\instascan.min.js"></script> {% endcomment %}
   </head>
   <body>
-    <video id="preview"></video>
+    {% load static %}
+    <script src={% static "app\js\html5-qrcode.min.js" %}></script>
+    <style>
+      .result {
+        background-color: green;
+        color:#fff;
+        padding:20px;
+      }
+      .row {
+        display:flex;
+      }
+    </style>
+    
+    
+    <div class="row">
+      <div class="col">
+        <div style="width:500px;" id="reader"></div>
+      </div>
+      <div class="col" style="padding:30px;">
+        <h4>SCAN RESULT</h4>
+        <div id="result">Result Here</div>
+      </div>
+    </div>
+    
+    
     <script type="text/javascript">
-      let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
-      scanner.addListener('scan', function (content) {
-        console.log(content);
-      });
-      Instascan.Camera.getCameras().then(function (cameras) {
-        if (cameras.length > 0) {
-          scanner.start(cameras[0]);
-        } else {
-          console.error('No cameras found.');
-        }
-      }).catch(function (e) {
-        console.error(e);
-      });
+    function onScanSuccess(qrCodeMessage) {
+        document.getElementById('result').innerHTML = '<span class="result">'+qrCodeMessage+'</span>';
+    }
+    
+    function onScanError(errorMessage) {
+      //handle scan error
+    }
+    
+    var html5QrcodeScanner = new Html5QrcodeScanner(
+        "reader", { fps: 10, qrbox: 250 });
+    html5QrcodeScanner.render(onScanSuccess, onScanError);
+    
     </script>
-  </body>
 </html>
