--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -108,7 +108,7 @@ section {
 .login-form input[type="submit"]:hover, .report-malfunction-form input[type="submit"]:hover {
     background-color: #46535e;;
 }
-.login-form input[type="text"], input[type="password"], .report-malfunction-form input[type="text"], input[type="password"] {
+.login-form input[type="text"], input[type="password"]{
     font-size: 20px;
     width: 100%;
     height: 3vw;
@@ -125,17 +125,28 @@ section {
 .username-box h1 {
     color: #fff;
 }
-
+.Hidden {
+    display: none;
+}
 .malfunction-description {
     height: 40vh;
     width: 40vw;
     margin-bottom: 3vh;
+    font-size: 20px;
+    resize: none;
 }
-.malfunction-name {
+.report-malfunction-form input[type="text"], input[type="password"]  {
     width: 40vw;
+    font-size: 20px;
+    height: 3vw;
+    margin: 1vw 0 1vw 0;
 }
 
 @media only screen and (max-width: 500px) {
+    body {
+        height: 100%; 
+        overflow: hidden
+    }
     header {
         background-color: #0d1b26;
         height: 10vw;
@@ -176,12 +187,12 @@ section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        height: 80%;
+        /* justify-content: center; */
+        height: 100%;
     }
-    .qr-code-icon {
-        height: 20vw;
-        width: auto;
+    #reader {
+        width: 70vw;
+        height: auto;
     }
     .login-form input[type="submit"] {
         width: 30%;
@@ -202,5 +213,4 @@ section {
         height: 10vw;
         margin: 4vw 0 2vw 0;
     }
-
 }
