--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -83,8 +83,9 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 80%;
+    /* justify-content: center; */
+    padding-top: 13vw;
+    height: 100vh;
     font-size: 20px;
 }
 .login-form label {
@@ -212,5 +213,31 @@ section {
         width: 100%;
         height: 10vw;
         margin: 4vw 0 2vw 0;
+    }
+    .report-malfunction-form input[type="submit"] {
+        width: 30%;
+        height: 10vw;
+        font-size: 15px;
+        cursor: pointer;
+        background-color: #0d1b26;
+        color: #fff;
+        border: none;
+        transition: 0.3s;
+    }
+    .report-malfunction-form input[type="submit"]:hover {
+        background-color: #46535e;
+    }
+    .report-malfunction-form input[type="text"] {
+        font-size: 15px;
+        width: 70vw;
+        height: 13vw;
+        margin: 4vw 0 2vw 0;
+    }
+    .malfunction-description {
+        height: 50vh;
+        width: 70vw;
+        margin-bottom: 3vh;
+        font-size: 15px;
+        resize: none;
     }
 }
