--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -83,9 +83,8 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    padding-top: 13vw;
-    height: 100vh;
+    justify-content: center;
+    height: 80%;
     font-size: 20px;
 }
 .login-form label {
@@ -213,6 +212,14 @@ section {
         width: 100%;
         height: 10vw;
         margin: 4vw 0 2vw 0;
+    }
+    .report-malfunction-form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 13vw;
+        height: 100vh;
+        font-size: 20px;
     }
     .report-malfunction-form input[type="submit"] {
         width: 30%;
