--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -145,7 +145,7 @@ section {
 @media only screen and (max-width: 500px) {
     body {
         height: 100%; 
-        overflow: hidden
+        overflow: hidden;
     }
     header {
         background-color: #0d1b26;
@@ -157,7 +157,7 @@ section {
         align-items: center;
     }
     header h1 {
-        font-size: 3vw;
+        font-size: 2.7vw;
     }
     .logoBox {
         display: flex;
@@ -214,10 +214,8 @@ section {
         margin: 4vw 0 2vw 0;
     }
     .report-malfunction-form {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-top: 13vw;
+        justify-content: flex-start;
+        padding-top: 9vh;
         height: 100vh;
         font-size: 20px;
     }
