--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>{% block title %}App{% endblock %}</title>
     <meta charset = 'utf-8'>
-    <meta name = 'viewport' content = 'width=device-width, initial-scale=1.0'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'app/img/favicon.png' %}">
