--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -108,7 +108,7 @@ section {
 .login-form input[type="submit"]:hover, .report-malfunction-form input[type="submit"]:hover {
     background-color: #46535e;;
 }
-.login-form input[type="text"], input[type="password"]{
+.login-form input[type="text"], .login-form input[type="password"] {
     font-size: 20px;
     width: 100%;
     height: 3vw;
@@ -135,11 +135,14 @@ section {
     font-size: 20px;
     resize: none;
 }
-.report-malfunction-form input[type="text"], input[type="password"]  {
+.report-malfunction-form input[type="text"], .report-malfunction-form input[type="password"]  {
     width: 40vw;
     font-size: 20px;
     height: 3vw;
     margin: 1vw 0 1vw 0;
+}
+.report-malfunction-form label {
+    font-size: 2.7vw;
 }
 
 @media only screen and (max-width: 500px) {
