--- a/app/static/app/css/style.css
+++ b/app/static/app/css/style.css
@@ -210,7 +210,7 @@ section {
     .login-form input[type="submit"]:hover {
         background-color: #46535e;;
     }
-    .login-form input[type="text"], input[type="password"] {
+    .login-form input[type="text"], .login-form input[type="password"] {
         font-size: 15px;
         width: 100%;
         height: 10vw;
