env variables - azure

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -17,6 +17,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/css/style.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'app/img/favicon.png' %}">
+    {% block head %}{% endblock %}
 </head>
 
 <body>
