--- a/app/templates/app/reports-opened-malfunctions.html
+++ b/app/templates/app/reports-opened-malfunctions.html
@@ -23,6 +23,7 @@
                         <th>Opis</th>
                         <th>Status</th>
                         <th>Data</th>
+                        <th>Osoba odpowiedzialna</th>
                     </tr>
                 </thead>
                 <tbody>   
