--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -21,47 +21,44 @@
 </head>
 
 <body>
-    <header>
-        <div class = 'logoBox'>
-            <img src = {% static 'app/img/logo.png' %} class = 'logo'>
-        </div>
-        <div class = 'username-box'>
-            <h1 class = 'username'>{% if user.is_authenticated %} Witaj, {{ request.user.first_name }}!{% endif %}</h1>
-        </div>
-        <div class = 'headerContent'>
-            <h1>Zgłoś problem z maszyną</h1>
-        </div>
-    </header>
-    <nav class = 'nav'>
-        <ul class = 'navUl'>
-            <li class = 'navLi'><a href = '/'>Strona Główna</a></li>
-            <li class = 'navLi'><a href = '/report-malfunction'>Zgłoś problem</a></li>
-            {% if user.is_authenticated %}
-                    <li class = 'navLi'><a href = '/reports-opened-malfunctions'>Otwarte awarie</a></li>
-                    <li class = 'navLi'><a href = '/reports'>Raporty</a></li>
-                    <li class = 'navLi'><a href = '/administration'>Administracja</a></li>
-                    <li class = 'navLi'><a href = '/admin'>django-admin</a></li>
-                    <li class = 'navLi'><a href = 'http://130.171.180.99/fis/people/support'>Kontakt</a></li>
-                    <li class = 'navLi'><a href = '/logout'>Wyloguj</a></li>
-            {% else %}
-                <li class = 'navLi'><a href = 'http://130.171.180.99/fis/people/support'>Kontakt</a></li>
-                <li class = 'navLi'><a href = '/login'>Zaloguj</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    <section>
-        {% block content %} 
-            {% if user.is_authenticated %}
-                <div class = 'main-page-content'>
 
-                </div>
-            {% else %}
-                <div class = 'main-page-content'>
-                    <img src = {% static 'app/img/megaphone.png' %} class = 'megaphone'/>
-                    <h2>Witaj w serwisie zgłaszania problemów z maszynami!</h2>
-                    <h3><a href='/report-malfunction'>Kliknij tutaj, aby zgłosić problem z maszyną.</a></h3>           
-                </div>
-            {% endif %}
-        {% endblock %}
-    </section>
+    <header>
+            <img src = {% static 'app/img/logo.png' %} class = 'logo'>
+            <h1 class = 'username'>{% if user.is_authenticated %} Witaj, {{ request.user.first_name }}!{% endif %}</h1>
+            <h1>Zgłoś problem z maszyną</h1> 
+    </header>
+    <div class="main">
+        <nav class = 'nav'>
+            <ul class = 'navUl'>
+                <li class = 'navLi'><a href = '/'>Strona Główna</a></li>
+                <li class = 'navLi'><a href = '/report-malfunction'>Zgłoś problem</a></li>
+                {% if user.is_authenticated %}
+                        <li class = 'navLi'><a href = '/reports-opened-malfunctions'>Otwarte awarie</a></li>
+                        <li class = 'navLi'><a href = '/reports'>Raporty</a></li>
+                        <li class = 'navLi'><a href = '/administration'>Administracja</a></li>
+                        <li class = 'navLi'><a href = '/admin'>django-admin</a></li>
+                        <li class = 'navLi'><a href = 'http://130.171.180.99/fis/people/support'>Kontakt</a></li>
+                        <li class = 'navLi'><a href = '/logout'>Wyloguj</a></li>
+                {% else %}
+                    <li class = 'navLi'><a href = 'http://130.171.180.99/fis/people/support'>Kontakt</a></li>
+                    <li class = 'navLi'><a href = '/login'>Zaloguj</a></li>
+                {% endif %}
+            </ul>
+        </nav>
+        <section>
+            {% block content %} 
+                {% if user.is_authenticated %}
+                    <div class = 'main-page-content'>
+
+                    </div>
+                {% else %}
+                    <div class = 'main-page-content'>
+                        <img src = {% static 'app/img/megaphone.png' %} class = 'megaphone'/>
+                        <h2>Witaj w serwisie zgłaszania problemów z maszynami!</h2>
+                        <h3><a href='/report-malfunction'>Kliknij tutaj, aby zgłosić problem z maszyną.</a></h3>           
+                    </div>
+                {% endif %}
+            {% endblock %}
+        </section>
+    </div>
 </body>
