--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -9,7 +9,7 @@
             <tr>
                 <td>{{ form.username }}</td>
             </tr>
-            <tr>
+            <tr>siemolo widzoqie    
                 <td>{{ form.password }}</td>
             </tr>
         </table>
