--- a/app/templates/registration/login.html
+++ b/app/templates/registration/login.html
@@ -1,30 +1,28 @@
-{% extends 'app/index.html' %}
-{% block title %}Zaloguj się{% endblock %}
-{% block content %}
+{% extends 'app/index.html' %} {% block title %}Zaloguj się{% endblock %} {% block content %}
 
-    <form method="post" action="{% url 'login' %}" class = 'login-form'>
-        {% csrf_token %}
-        <table>
-            <label>Zaloguj się:</label>
-            <tr>
-                <td>{{ form.username }}</td>
-            </tr>
-            <tr>siemolo widzoqie    
-                <td>{{ form.password }}</td>
-            </tr>
-        </table>
-        {% if form.errors %}
-            <style>
-                .login-form input[type="text"], input[type="password"]:last-child {
-                    margin-bottom: 0;
-                }
-            </style>
-            <p class = 'login-error'>Your username and password didn't match. Please try again.</p>
-        {% endif %}
-        <input type="submit" value="Zaloguj" />
-        <input type="hidden" name="next" value="{{ next }}" />
-        <p><a href="{% url 'password_reset' %}">Zapomniałeś hasła?</a></p>
-    </form>
-
+<form method="post" action="{% url 'login' %}" class="login-form">
+    {% csrf_token %}
+    <table>
+        <label>Zaloguj się:</label>
+        <tr>
+            <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+            <td>{{ form.password }}</td>
+        </tr>
+    </table>
+    {% if form.errors %}
+    <style>
+        .login-form input[type="text"],
+        input[type="password"]:last-child {
+            margin-bottom: 0;
+        }
+    </style>
+    <p class="login-error">Your username and password didn't match. Please try again.</p>
+    {% endif %}
+    <input type="submit" value="Zaloguj" />
+    <input type="hidden" name="next" value="{{ next }}" />
+    <p><a href="{% url 'password_reset' %}">Zapomniałeś hasła?</a></p>
+</form>
 
 {% endblock %}
